--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <ul>
                     <li><a href="#"><i class="fas fa-heart"></i></a></li>
                     <li><a href="#"><i class="fas fa-bookmark"></i></a></li>
-                    <li><a href="#"><i class="fas fa-star-half-alt"></i></a></li>
+                    <li><a href="actorsGallery.html" target="_blank"><i class="fas fa-star-half-alt"></i></a></li>
                 </ul>
             </div>
             <p class="movie-info-qoute">Mankind was born on Earth. It was never meant to die here.</p>
